--- a/app/views/home/success.html.erb
+++ b/app/views/home/success.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6 offset-md-3"><h1 class="display-4">Usuario registrado!</h1></div>        
+        <div class="col-md-6 offset-md-3"><h1 class="display-4">Usuario Logeado!</h1></div>        
     </div>
 </div>
